<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_materiales"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_materiales" />
        <item
            android:id="@+id/nav_exportacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_exportacion" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_configuracion" />
    </group>

    <item android:title="@string/nav_ayuda">
        <menu>
            <item
                android:id="@+id/nav_ayuda"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_ayuda" />
            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_acerca" />
        </menu>
    </item>
</menu>